# platform-monitoring

./: .dockerignore  .gitignore  .pre-commit-config.yaml  Dockerfile  Dockerfile.k8s  K8S_IMAGES_PREFIX  Makefile  PLATFORMAPI_IMAGE  PLATFORMAUTHAPI_IMAGE  PLATFORMCONFIGMIGRATIONS_IMAGE  PLATFORMCONFIG_IMAGE  PLATFORMCONTAINERRUNTIME_IMAGE  PLATFORMNOTIFICATIONS_IMAGE  README.md  k8s.mk  minikube.sh  pyproject.toml  setup.cfg  setup.py  tests.Dockerfile
.circleci/: config.yml
.github/: dependabot.yml
.github/workflows/: ci.yaml  release-image.yml  release.yml  setup-automerge.yml  test.yaml  update-pre-commit.yaml
charts/platform-monitoring/: Chart.yaml  values-dev.yaml  values.yaml
charts/platform-monitoring/charts/: k8s-resources-1.0.1.tgz
charts/platform-monitoring/files/fluent-bit/: fluent-bit.conf
charts/platform-monitoring/files/fluentd/: fluentd.conf
charts/platform-monitoring/templates/: _helpers.tpl  deployment.yml  externalSecret.yaml  fluent-bit.yaml  fluentd.yaml  ingress.yaml  logs-compact-deployment.yaml  logs-compact-deployments.yaml  logs-storage-key-secret.yaml  minio-gateway.yaml  resources-monitor-deployment.yaml  s3proxy.yaml  secrets.yaml  service.yaml
deploy/: README
deploy/platformmonitoringapi/: Chart.yaml  values-dev-aws.yaml  values-dev-azure.yaml  values-dev.yaml  values-staging.yaml  values-template.yaml  values.yaml
deploy/platformmonitoringapi/files/fluent-bit/: fluent-bit.conf  parsers.conf
deploy/platformmonitoringapi/files/fluentd/: fluentd.conf
deploy/platformmonitoringapi/templates/: _helpers.tpl  dockerengineapi.yml  dockerengineapi_configmap.yml  fluent-bit.yaml  fluentd.yaml  logs-storage-key-secret.yaml  platformmonitoring.gke.yml  platformmonitoring.yml
pip-wheel-metadata/platform_monitoring.dist-info/: METADATA  entry_points.txt  top_level.txt
platform_monitoring/: api.py  apps_service.py  base.py  config.py  config_client.py  config_factory.py  container_runtime_client.py  docker_client.py  jobs_service.py  kube_client.py  log_cleanup_poller.py  log_compact.py  logs.py  loki_client.py  monitoring_service.py  platform_api_client.py  platform_apps_client.py  user.py  utils.py  validators.py  vcluster.py
platform_monitoring/resources/: main.py  monitoring.py
requirements/: syntax.txt  test.txt
tests/: conftest.py
tests/integration/: auth.py  conftest.py  conftest_admin.py  conftest_auth.py  conftest_config.py  conftest_kube.py  conftest_s3.py  test_api.py  test_config.py  test_jobs_service.py  test_kube.py  test_log_compact.py  test_log_reader.py  test_mon.py  test_s3.py  test_telemetry.py
tests/integration/resources/: test_monitoring.py  test_service.py
tests/k8s/: alloy-values.yml  cluster.sh  dockerengineapi.yml  extra-entities.yml  logging.yml  loki-values.yml  platformadmin.yml  platformapi.yml  platformauth.yml  platformconfig.yml  platformcontainerruntime.yml  platformmonitoring.yml  platformnotifications.yml  pod.yml  registry.yml  wait-pods-ready.sh
tests/k8s/files/: fluent-bit.conf  fluentd.conf
tests/unit/: test_api.py  test_config.py  test_config_client.py  test_docker_client.py  test_jobs_service.py  test_kube.py  test_logs.py  test_mon.py  test_validators.py
tests/unit/resources/: test_monitoring.py  test_service.py
