[metadata]
name = platform-monitoring
description = Neu.ro platform monitoring
url = https://github.com/neuro-inc/platform-monitoring
long_description = file: README.md, LICENSE
license = Apache 2
classifiers =
    License :: OSI Approved :: Apache 2
    Programming Language :: Python :: 3

[options]
zip_safe = False
python_requires = >=3.9
include_package_data = True
packages = find:
platforms = any
install_requires =
    aiohttp==3.8.6
    neuro-auth-client==22.6.1
    neuro-config-client==23.9.0
    neuro-sdk==22.7.1
    aioelasticsearch==0.7.0
    elasticsearch<8.0.0
    docker-image-py==0.1.12
    trafaret==2.1.1
    neuro-logging==21.12.2
    aiohttp-cors==0.7.0
    aiobotocore==2.7.0
    iso8601==2.1.0
    cachetools==5.3.2

[options.entry_points]
console_scripts =
    platform-monitoring-api = platform_monitoring.api:main
    platform-monitoring-logs-compact = platform_monitoring.logs_compact:main

[options.extras_require]
dev =
    mypy==1.6.1
    pre-commit==3.5.0
    pytest==7.4.0
    pytest-asyncio==0.21.1
    pytest-cov==4.1.0
    python-jose==3.3.0
    types-cachetools

[flake8]
max-line-length = 88
ignore = N801,N802,N803,E252,W503,E133,E203,F541

[tool:pytest]
testpaths = tests
asyncio_mode = auto
filterwarnings=
    error
    ignore::DeprecationWarning:jose
    ignore::DeprecationWarning:aioelasticsearch
    ignore:Inheritance class AuthorizedSession from ClientSession is discouraged:DeprecationWarning:
markers =
    minikube

[coverage:run]
branch = True
source = platform_api
omit =
    logs_compact.py

[mypy]
check_untyped_defs = True
disallow_any_generics = True
disallow_untyped_defs = True
follow_imports = silent
strict_optional = True
warn_redundant_casts = True
warn_unused_ignores = True

[mypy-aiohttp_security]
ignore_missing_imports = true

[mypy-aiohttp_security.api]
ignore_missing_imports = true

[mypy-async_exit_stack]
ignore_missing_imports = true

[mypy-async_generator]
ignore_missing_imports = true

[mypy-jose]
ignore_missing_imports = true

[mypy-neuro_auth_client.*]
ignore_missing_imports = true

[mypy-neuromation.*]
ignore_missing_imports = True

[mypy-pytest]
ignore_missing_imports = true

[mypy-_pytest.*]
ignore_missing_imports = true

[mypy-setuptools]
ignore_missing_imports = true

[mypy-aioelasticsearch.*]
ignore_missing_imports = true

[mypy-docker_image.*]
ignore_missing_imports = true

[mypy-trafaret]
ignore_missing_imports = true

[mypy-aiohttp_cors]
ignore_missing_imports = true

[mypy-aiobotocore.*]
ignore_missing_imports = true

[mypy-botocore.*]
ignore_missing_imports = true

[mypy-platform_config_client.*]
ignore_missing_imports = true

[mypy-iso8601]
ignore_missing_imports = true
