[metadata]
name = platform_monitoring
description = Neu.ro platform monitoring
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/neuro-inc/platform-monitoring
license = Apache 2
license_files = LICENSE
classifiers =
    License :: OSI Approved :: Apache 2
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3 :: Only

[options]
packages = find:
install_requires =
    aiobotocore==2.13.1
    aiohttp[speedups]==3.9.5
    cachetools==5.3.3
    docker-image-py==0.1.12
    elasticsearch<8.0.0
    iso8601==2.1.0
    neuro-auth-client==22.6.1
    neuro-config-client==24.4.3
    neuro-logging==24.4.0
    neuro-sdk==22.7.1
    orjson
    trafaret==2.1.1
    uvloop
python_requires = >=3.11
include_package_data = True
platforms = any
zip_safe = False

[options.entry_points]
console_scripts =
    platform-monitoring-api = platform_monitoring.api:main
    platform-monitoring-logs-compact = platform_monitoring.log_compact:main

[options.extras_require]
dev =
    mypy
    pre-commit
    pytest==8.2.2
    pytest-asyncio==0.21.2
    pytest-cov==5.0.0
    python-jose==3.3.0
    ruff
    types-cachetools

[flake8]
max-line-length = 88
ignore = N801,N802,N803,E252,W503,E133,E203,F541

[tool:pytest]
testpaths = tests
asyncio_mode = auto
filterwarnings =
    error
    ignore::DeprecationWarning:jose
    ignore:Inheritance class AuthorizedSession from ClientSession is discouraged:DeprecationWarning:
    ignore:ssl.PROTOCOL_TLS is deprecated:DeprecationWarning:
markers =
    minikube

[coverage:run]
branch = True
source = platform_api

[mypy]
check_untyped_defs = True
disallow_any_generics = True
disallow_untyped_defs = True
follow_imports = silent
strict_optional = True
warn_redundant_casts = True
warn_unused_ignores = True

[mypy-aiohttp_security]
ignore_missing_imports = true

[mypy-aiohttp_security.api]
ignore_missing_imports = true

[mypy-async_exit_stack]
ignore_missing_imports = true

[mypy-async_generator]
ignore_missing_imports = true

[mypy-jose]
ignore_missing_imports = true

[mypy-neuro_auth_client.*]
ignore_missing_imports = true

[mypy-neuromation.*]
ignore_missing_imports = True

[mypy-pytest]
ignore_missing_imports = true

[mypy-_pytest.*]
ignore_missing_imports = true

[mypy-setuptools]
ignore_missing_imports = true

[mypy-docker_image.*]
ignore_missing_imports = true

[mypy-trafaret]
ignore_missing_imports = true

[mypy-aiobotocore.*]
ignore_missing_imports = true

[mypy-botocore.*]
ignore_missing_imports = true

[mypy-platform_config_client.*]
ignore_missing_imports = true

[mypy-iso8601]
ignore_missing_imports = true
